# esprc-brain

./: .gitignore  .gitmodules  CLAUDE.md  GEMINI.md  LICENSE  README.en.md  README.md
Firmware/: CMakeLists.txt  partitions.csv  sdkconfig.defaults  sdkconfig.defaults.esp32c6
Firmware/main/: CMakeLists.txt  idf_component.yml  index.html  main.c
Firmware/main/include/: ProgramManager.h  actuators.h  bp32_platform.h  dns_server.h  esp_hid_gap.h  espnow_manager.h  gamepadHandler.h  gamepad_types.h  hid_gamepad.h  ledStripHandler.h  led_strip_encoder.c  led_strip_encoder.h  nvs_prefs.h  pins.h  state.h  webServerHandler.h
Firmware/main/src/: ProgramManager.cpp  actuators.cpp  bp32_platform.cpp  dns_server.c  esp_hid_gap.c  espnow_manager.cpp  gamepadHandler.cpp  hid_gamepad.cpp  hid_gamepad_stub.cpp  ledStripHandler.cpp  nvs_prefs.cpp  sketch.cpp  state.cpp  webServerHandler.cpp
Firmware/webapp/: gulpfile.js  package-lock.json  package.json
Firmware/webapp/config/: led_config.json
Firmware/webapp/src/: index.html  joystick.js  script.js  style.css
Firmware/webapp/src/js/: api.js  config.js  index.js  joystick.js  kidMode.js  language.js  leds.js  lights.js  ota.js  pins.js  program.js  recorder.js  state.js  translations.js  ui.js
Models/: README.MD
Models/SCADs/: RearFrameLeftMod.scad  fake_bear_module.scad  gearMod.scad  pololuHolder.scad
Models/STLs/: RearFrameLeftMod.stl  fake_bear_back.stl  fake_bear_front.stl  gearModPololu.stl  motorHoldPololu.stl
Models/V2/: RearFrameLeftModV2.stl  RearFrameRightModV2.stl  TestN20.stl  WheelAdapterModV2.stl  WheelAdapterN20.stl
